--- a/frontend/src/sass/components/_modal.scss
+++ b/frontend/src/sass/components/_modal.scss
@@ -84,6 +84,7 @@
       justify-content: flex-start;
       align-items: center;
       overflow-y: auto;
+      overflow-x: hidden;
     }
 
     &__close-button {
